--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="all.css">
 </head>
 <body>
-
+    <h1>Hello how are you</h1>
 </body>
 </html>
