--- a/frontend/assets/index.html
+++ b/frontend/assets/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hi</title>
-    <link rel="stylesheet" href="styles/index-8638cea2b3.css">
+    <link rel="stylesheet" href="styles/index.css">
 </head>
 <body>
     <h1>Hi</h1>
